--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,3 +74,9 @@
 </body>
 </html>
 <link rel="stylesheet" href="style.css">
+<section class="scanner">
+  <h2>🔗 فحص الروابط</h2>
+  <a href="scan.html">
+    <button>افحص رابط الآن</button>
+  </a>
+</section>
