--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,5 +20,9 @@
   <footer>
     <p>© 2025 الجدار السيبراني | CyberWall</p>
   </footer>
+  <section class="messages">
+  <h2>📬 إرسال رسالة</h2>
+  <a href="messages.html"><button>إرسال ملاحظاتك أو استفسارك</button></a>
+</section>
 </body>
 </html>
